<resources>
    <string name="app_name">Tutorial</string>
    <string name="china_button_text">China</string>
    <string name="japan_button_text">Japan</string>
    <string name="italy_button_text">Italy</string>
    <string name="background">Background</string>
    <string name="current_score">現在分數</string>
    <string name="ChinaQ1">在清末民初前的中國，當時人們吃「鴨蛋」的機會遠高於吃「雞蛋」，請問下列何者不是原因之一？</string>
    <string name="ChinaA1_1">雞通常是各戶農家零星飼養，而鴨則可方便交由趕鴨人一大群放養</string>
    <string name="ChinaA1_2">雞蛋的體積小、殼薄、易碎；而鴨蛋的體積大、殼厚</string>
    <string name="ChinaA1_3">鴨蛋可以做出比較多料理，也適合加工製成鹹蛋、皮蛋長期保存</string>
    <string name="ChinaA1_4">鴨蛋在書籍《營養概論》內容中，表示較為營養</string>
    <string name="ChinaQ2">是什麼契機，讓中國產生蛋品工業的崛起？</string>
    <string name="ChinaA2_1">鴨瘟的大流行，進而產生雞蛋的替代方案</string>
    <string name="ChinaA2_2">西方洋行的大量出口雞蛋，讓中國人開始注意</string>
    <string name="ChinaA2_3">慈禧太后的獨鍾，使雞蛋開始蔚為風潮</string>
    <string name="ChinaA2_4">蛋糕製作引進，吸引人民關注雞蛋</string>
    <string name="ChinaQ3">雞蛋因為其殼薄、易碎、不好保存，那麼蛋廠會使用方法延長雞蛋的保存期限，以下何者「不是」延長的方法？</string>
    <string name="ChinaA3_1">蛋酥</string>
    <string name="ChinaA3_2">蛋粉</string>
    <string name="ChinaA3_3">濕蛋</string>
    <string name="ChinaA3_4">冰蛋</string>
    <string name="ChinaQ4">吳憲出版了一本經典著作《營養概論》，詳細分析中國飲食的特色、缺點與改善方式。他建議吃高營養的「牛乳、雞蛋」，但為什麼沒有提到與雞蛋營養成份相去不遠的鴨蛋呢？</string>
    <string name="ChinaA4_1">營養學是以西方營養為基礎所建立的學科，在其架構下沒有鴨蛋的位置</string>
    <string name="ChinaA4_2">吳憲最初採集的樣本多來南方，而南方不吃鴨蛋</string>
    <string name="ChinaA4_3">因為吳憲自己喜歡雞蛋</string>
    <string name="ChinaA4_4">以上皆非</string>
    <string name="ChinaQ5">下列何者不是常見的鴨蛋料理？</string>
    <string name="ChinaA5_1">皮蛋豆腐</string>
    <string name="ChinaA5_2">蛋黃酥</string>
    <string name="ChinaA5_3">黑森林蛋糕</string>
    <string name="ChinaA5_4">端午蛋黃粽</string>

    <string name="ItalyQ1">根據制度，下列哪一種披薩不可以被稱為「正宗拿坡里披薩」？</string>
    <string name="ItalyA1_1">水手披薩</string>
    <string name="ItalyA1_2">瑪格麗塔披薩</string>
    <string name="ItalyA1_3">章魚燒披薩</string>
    <string name="ItalyA1_4">瑪格麗塔加料披薩</string>
    <string name="ItalyQ2">下列何者「不是」受到認證的拿坡里披薩跟其他披薩的差異？</string>
    <string name="ItalyA2_1">邊緣餅皮必須比中間高，且帶有來自烤箱的金黃色澤</string>
    <string name="ItalyA2_2">披薩摸起來、吃起來必須相當酥脆</string>
    <string name="ItalyA2_3">中間的裝飾佐料看起來主要呈現番茄紅，且油脂混合均勻完美</string>
    <string name="ItalyA2_4">佐料其餘顏色可以視食材而定，可能是大蒜的白、莫札瑞拉乳酪片的白</string>
    <string name="ItalyQ3">下列何者「不是」正宗規範不能落實追蹤的因素？</string>
    <string name="ItalyA3_1">驗證授權需要支付高昂經費</string>
    <string name="ItalyA3_2">披薩協會、政府或歐盟，都不太可能投下大筆資金來進行追蹤</string>
    <string name="ItalyA3_3">規範並沒有指名多數食材的產地</string>
    <string name="ItalyA3_4">現有規範主要強調製作過程與最後成品</string>
    <string name="ItalyQ4">下列何者「不是」全球化下，義大利披薩產業的改變？</string>
    <string name="ItalyA4_1">義大利部分最高檔的餐廳的廚師來自外國，如印度、突尼西亞、約旦</string>
    <string name="ItalyA4_2">大部分居民對於外國廚師與移工的加入，保持敵意與抗拒的態度</string>
    <string name="ItalyA4_3">外籍廚師會在餐飲作品中展現家鄉的傳統飲食</string>
    <string name="ItalyA4_4">不少義大利的小麥進口，來自美國、加拿大、東歐</string>
    <string name="ItalyQ5">移工長期困在不人道的居住環境，引發反抗行動而變成紀錄片《綠血》，此片在義大利的哪一個影展放映？</string>
    <string name="ItalyA5_1">坎城影展</string>
    <string name="ItalyA5_2">柏林影展</string>
    <string name="ItalyA5_3">金馬影展</string>
    <string name="ItalyA5_4">威尼斯影展</string>

    <string name="JapanQ1">在未經特殊處理的狀況下河豚的什麼部位是可以吃的</string>
    <string name="JapanA1_1">肝臟</string>
    <string name="JapanA1_2">血</string>
    <string name="JapanA1_3">皮</string>
    <string name="JapanA1_4">卵巢</string>
    <string name="JapanQ2">下列中的人物誰不能吃河豚</string>
    <string name="JapanA2_1">一般人民</string>
    <string name="JapanA2_2">天皇</string>
    <string name="JapanA2_3">台灣人</string>
    <string name="JapanA2_4">蔡英文</string>
    <string name="JapanQ3">日本的櫻肉指的是什麼肉</string>
    <string name="JapanA3_1">馬肉</string>
    <string name="JapanA3_2">羊肉</string>
    <string name="JapanA3_3">豬肉</string>
    <string name="JapanA3_4">櫻花花瓣</string>
    <string name="JapanQ4">傳統的江戶前壽司中吃不到什麼壽司?</string>
    <string name="JapanA4_1">鮪魚壽司</string>
    <string name="JapanA4_2">鯛魚壽司</string>
    <string name="JapanA4_3">鰻魚壽司</string>
    <string name="JapanA4_4">鮭魚壽司</string>
    <string name="JapanQ5">鰻魚除了蒲燒還有什麼有名的料理方法</string>
    <string name="JapanA5_1">清蒸</string>
    <string name="JapanA5_2">白燒</string>
    <string name="JapanA5_3">天婦羅</string>
    <string name="JapanA5_4">壽喜燒</string>
    <string name="FUGU">劇毒的美味\n
河豚魚的內臟確實含有劇毒，若未謹慎處理，食之嗚呼哀哉的例子屢見不鮮。然而，河豚的美味也是有人掛保證，不論是中國的蘇東坡、梅堯臣，或是日本的伊藤博文等「河豚黨」成員，都抱有拚死吃河豚的決心。
\n\n禁止食用？\n
日本雖然食用河豚，但因缺乏現代醫學的毒素知識，經常發生中毒。16世紀，豐臣秀吉（1537-1598）發動「文祿・慶長之役」攻打朝鮮，各地士兵齊聚今日山口縣的下關，準備橫渡「對馬海峽」。偏偏下關正是河豚產地，士兵們一飽口福之際紛紛發生中毒，豐臣秀吉大怒，下達了河豚禁食令，在木牌上刻河豚圖像，讓不識字的士兵也能知道不准吃此魚。
\n\n哪裡有毒?\n
毒素主要分布在生殖腺、肝臟、腎臟、血液中，少量分布在眼睛、魚皮及腦隨等部位。 每年3-5月間是河豚卵巢發育期，毒性最强。
\n\n劇毒的河豚肝可以吃?\n
河豚卵巢米糠漬的製作，需要有河豚加工許可的執照，並且成品需要經石川縣預防醫學協會檢驗無毒後才能出貨。在製作上首先將河豚卵巢鹽漬一年到一年半後，將表面的鹽分洗去後，再使用米糠醃漬一年到兩年不等，即完成。
\n\n天皇吃不起的美味\n
像河豚這種雖然鮮美，但是可能有毒的東西，是萬萬不能嘗試的，要是天皇有個什麼三長兩短，可不是御膳房能擔當得起的。所以，昭和天皇一輩子都沒有吃過河豚。</string>
    <string name="Sashimi">刺身等於生魚片?\n
雖現在談及刺身都會直覺聯想到生魚片，但只要是以新鮮未煮的食材製作，都可以稱為是刺身，包含牛肉、雞肉或是任何可以切成片狀食用的材料。刺身也是充分展現日本人的飲食文化哲學——盡可能地品嘗食材本身的原味——最佳的料理之一，無調味地直接品嘗到大海的鮮甜。
\n\n雞肉\n
從江戶時代起，日本九州即有生食雞肉的傳統，溫暖宜人的氣候加上火山所帶來的肥沃土壤，得天獨厚的條件讓當地飼養的雞品質優良，除了烹煮食用外，生食雞肉時舌尖裡豐厚的口感與均勻的脂肪，帶來有別於生魚片的美味感受。
\n\n櫻花刺身?\n
日本人口中常說的「櫻肉」到底是什麼肉呢？其實就是馬肉。馬不同於豬和牛，因體型和習性而很少有大量脂肪，所以肉質鮮紅粉嫩，脂肪和肉紅白交錯，看上去像極了朵朵盛開的櫻花，因此被日本人稱作「櫻肉」。
\n\n鮭魚不是壽司?\n
在古代的日本，鮭魚被認為是淡水魚，而淡水魚生吃會有較大的寄生蟲風險，所以在傳統的日本壽司中是吃不到鮭魚的。
</string>
    <string name="Unagi">不只有蒲燒\n
鰻魚的燒法有白燒和蒲燒兩種，白燒更注重鰻魚的品質及大廚的烤制手法，在烤制時用鹽去除鰻魚的腥味，為保有鰻魚原本的清香鮮甜，單單已鰻魚搭配少許的鹽，直火碳烤，更加考驗鰻魚的品質及師傅的火候控制。
\n\n鰻魚肝\n
若你喜歡內臟料理，對於魚類的甘苦味是喜歡的，他有著鰻魚獨特的微苦內臟香氣，柔滑綿密的肝與脆彈的腸有著不同層次的口感，讓人回味無窮。
\n\n鰻魚哪裡來?\n
日本鰻的產卵場位於馬里亞納海溝附近，母鰻在三、四百公尺深的海裡交配產卵一次後隨即死亡，孵化後的仔魚先經過很長的旅途後進入黑潮，每年十月到隔年三月間，由黑潮送到台灣、中國、韓國及日本的大陸棚並進入河口。前日本市場上流通的鰻魚大都是養殖。不過鰻魚無法人工繁殖，魚苗仍需捕撈。</string>
    <string name="Italy_intro1">義式傳統料理陣容堅強，令人眼花撩亂，近年來的話題主角是披薩，或許是因為它擁有的地位經典不凡。披薩緣起於義大利，傳到世界上許多地方後不斷被神化，以至於我們現在可以說，披薩是世界食物，有許多地方版本。

\n這些發展自然也讓那不勒斯的披薩師傅受到不小的挑戰，他們團結進行遊說，希望能在國際上有能見度，並鞏固義大利在披薩產業的優越性。二○一○年二月，正宗拿坡里披薩協會（Associazione Verace Pizza Napoletana）、拿坡里披薩師傅協會（Associazione Pizzaiuoli Napoletani）以「拿坡里披薩」（pizza napoletana）獲歐盟傳統特產保護制度（Traditional Specialty Guaranteed，簡稱 TSG 認證）認可其地位。

\n根據規範，只有三種披薩可以稱為正宗拿坡里披薩：水手披薩（marinara，食材為番茄、奧勒岡香草、大蒜、橄欖油）、瑪格麗塔披薩（margherita，食材為番茄、莫札瑞拉乳酪、羅勒、橄欖油）、瑪格麗塔加料披薩（margherita extra，食材多加上小番茄），該認證對拿坡里披薩的規範不只包含食材與烹飪手法，連感官元素都有明文規定。</string>
    <string name="Italy_intro2">受到認證的拿坡里披薩跟其他披薩的差異在於，邊緣餅皮必須比中間高，且帶有來自烤箱的金黃色澤，披薩摸起來、吃起來質地柔軟，中間的裝飾佐料看起來主要呈現番茄紅，且油脂混合均勻完美，佐料其餘顏色視食材而定，可能是奧勒岡的綠、大蒜的白；或莫札瑞拉乳酪片的白，乳酪之間的間距可能要稍寬或稍緊，搭配羅勒葉的綠，視烘烤時間顏色或淺或深……。

\n理論上，世界上所有的披薩師傅只有在遵循傳統特產保護規範時，才能合法稱自家產品為「拿坡里披薩」，但實務上，不論是那不勒斯這兩個披薩協會，還是義大利政府或歐盟，都不太可能投下大筆資金來進行追蹤，研究確保世界上沒有任何違法情形。爭取認證一部分是為了推廣義大利食品：人們製作披薩時，理應使用這些受到保護認證的產品。

\n不過，由於規範並沒有指名多數食材的產地，主要也強調製作過程與最後成品，這個認證的訴求也在於忠於國族情感，反對全球化的口味，強調學成出師的拿坡里披薩師傅其文化地位與傳統技術之價值。</string>
    <string name="Italy_intro3">有了歐盟傳統特產保護制度的認證地位，披薩得以成為義式食品之代表，不可或缺，還可大方宣傳。不過，以這樣的角度看披薩，抹除了全球化在披薩製造上的多個面向，或至少可說是視而不見。在義大利的許多披薩店，製作披薩的人是移民，反映餐飲業雇用大量外籍勞工的現狀。

\n二○○八年，紐約《時代》雜誌報導指出，義大利部分最高檔、生意最好的餐廳所雇用的廚師來自外國，如印度、突尼西亞、約旦，而大多數的顧客覺得，只要他們願意按照方法煮出義式料理，這並沒什麼問題。攝影師馬可．戴洛古（Marco Delogu）、麥可．迪安瑞斯（Michele de Andreis）舉辦了一場攝影展，主題是在義大利工作的外籍廚師，顯示出移民在義大利的專業廚房裡，並不只是負責洗碗、擦桌子，他們也掌廚。

\n該攝影展明顯有引戰的意味，展出的專業工作者人像照特意選擇出身阿爾巴尼亞、摩洛哥、孟加拉等國家的男男女女，來呈現義式餐飲的新面貌。戴洛古常藉由作品討論公眾議題，他也曾拍攝移工牧羊人的肖像，他們住在馬雷瑪、羅馬南方彭提諾沼澤一帶，該地區是莫札瑞拉水牛乳酪的重要產地，這些作品在二○○七年時集結展出，並於二○○九年出版成冊。</string>
    <string name="Italy_intro4">並非所有的披薩食材都屬於義大利。研究指出，由於氣候變遷，義大利將無法維持現今的小麥產量，更別說現在的產量已是供不應求。由於義大利人大量消耗麵包與義大利麵，義大利的小麥進口量佔歐盟進口總量的八十％。世上最大的義大利麵製造商，百味來，其小麥原料來自美國、加拿大、東歐等地。

\n若我們沿著披薩生產線一路追蹤，會發現照顧生產莫札瑞拉乳酪水牛的牧羊人是移工，採番茄的工人，也是非洲移工，而且通常沒有合法登記身分，他們採的番茄包含知名品種聖馬札羅番茄，多用於製造披薩醬料。

\n不過，二○一○年一月，此議題終於在卡拉布里亞引爆出社會事件。未依法登記農場移工長期困在不人道的居住環境，薪資低落又受到當地犯罪組織「光榮會」（ndrangheta，卡拉布里亞黑手黨）的「保護費」勒索，受到排外主義的突襲檢查刺激後，引發一場暴動。這場反抗行動變成紀錄片《綠血》（Il sangue verde）的主題，在當年威尼斯影展放映。</string>
    <string name="china_txt">為什麼大家常吃「雞蛋」，不吃「鴨蛋」？\n帶你回到雞蛋崛起的時代</string>
    <string name="China_intro1">古人會依各地的氣候環境、雞鴨的生活習性，選擇養雞或養鴨，例如華北氣候較為乾旱，養雞多於養鴨；華南則河湖遍布，適合喜歡水生環境的鴨子。在飼養方式上，雞通常是各戶農家零星飼養，而鴨則可交由趕鴨人一大群放養。

\n再看蛋的產量，1930 年間，雞一年產蛋不到百顆，而鴨養得好的話，每年的產蛋量高達 200 多顆。如果將雞蛋和鴨蛋放在一起比較會發現，雞蛋的體積小、殼薄、易碎；而鴨蛋的體積大、殼厚，可以做出比較多料理，也適合加工製成鹹蛋、皮蛋長期保存。

\n事實上，養雞鴨的最初目的是為了吃肉，而蛋則因為節日、奉神、驅邪、解毒等民俗需求而被賦予特殊意義。像是襄陽到江西一帶有端午節送鹹蛋給親友的習俗；江浙一帶則會在立夏給孩子吃鹹蛋加白水蛋，祈禱遠離病痛、滾過一夏平安；而粵語文化圈則會在中秋月餅內包鹹蛋黃。

\n一直到清代以後，由於人工孵化技術的成熟，讓農人可以大批養殖雞鴨，再加上鴨蛋加工技術的進步，蛋才逐漸成為可獨立販售的商品。當中同時受到華南與華北歡迎的加工蛋品，非「皮蛋」莫屬！</string>
    <string name="China_intro2">與此同時，隨著 20 世紀初鐵路網的興建，洋商開始沿著鐵路深入中國各地，利用既有的收購網絡大量採買雞蛋，並在鐵路沿線開設蛋品加工廠，展開以「雞蛋」為主的蛋品工業。民初的蛋行以買賣鴨蛋為主，但洋商卻只收雞蛋，讓蛋業界一度「驚為異事」！

\n當初雞蛋在中國難以成為商品，主要是因為其殼薄、易碎、不好保存，更別提要出口到歐美，那麼蛋廠又是怎麼延長雞蛋的保存期限？當時共有 3 種加工方式：蛋粉、濕蛋、冰蛋。

\n蛋粉在第一次世界大戰期間受到歡迎，因為其體積小、重量輕、方便運送。製作方式為先將蛋打在鋅盤上，再放入烤窯，並定時翻面、將蛋搗碎。因窯內的溫度很高，工人多不穿衣服，每當要幫蛋翻面時，就衝進去作業後，再衝出來跳入冷水降溫。

\n中國蛋品工業的另一波變動發生在一次大戰結束後，歐美各國開始對食品內含的重金屬與防腐劑嚴格控管，讓蛋粉、濕蛋的市場日漸萎縮，而投資成本較高的冰蛋卻趁勢崛起，成為日後主要的出口蛋品。

\n冰蛋是把蛋打開後，依客戶需求，將蛋白和蛋黃分開或混合，裝入馬口鐵的罐子後直接進入冷藏，不像蛋粉有鋅汙染問題，也不像濕蛋要加硼酸防腐。</string>
    <string name="China_intro3">蛋品工業的興起影響了中國城市居民的飲食，雞蛋和鴨蛋開始分庭抗禮，人們不再是有什麼吃什麼，而是可以選擇要吃雞蛋或鴨蛋。但是如此分庭抗禮的局面只限於城市，長江流域及其以南廣大的農村居民還是吃鴨蛋為主。

\n對農村居民來說，吃雞蛋不是難事，家家戶戶多少都有養雞，但是現實狀況是雞蛋無法讓全家吃飽，反而賣給洋商還能換錢買玉米、麵粉，做成餅來餵飽全家。人們要能選擇吃什麼、甚至吃得好，必須先改善自身的經濟狀況，還要能接受「教育」來學習新的飲食觀念。

\n清末民初的中國飽受列強侵略，卻也讓人民有學習西方知識的契機。特別是 1909 年以後，庚子賠款補助許多中國青年前往美國留學，帶回眾多改變中國現況的新觀念。「營養學」就是這麼進到中國的，「雞蛋」自此與「營養」畫上等號，逐步養成人們吃雞蛋攝取營養的觀念。

\n這位將營養學帶入中國的學者名為吳憲，他認為，中國人長期營養不良的結果，造成人民體格弱小、壽命短、抵抗力差，連帶讓沙眼、肺結核等流行病氾濫，嬰兒與成人的死亡率偏高。營養不良也影響到人民的行為，因為身體欠佳，人只能安於自我、沒有積極行事的心力，長期養成「懦弱、無恆、不進展、不探險，適於苟安」的性格。</string>
    <string name="China_intro4">這裡有一個弔詭，吳憲生長在鴨蛋的產地福建閩侯，應該知道在華南地區中國人較常吃鴨蛋，而根據他對蛋類的營養分析，雞蛋、鴨蛋的營養成份其實相去不遠，為何他只強調多吃雞蛋？

\n張寧研究員認為可能原因有兩點：第一，吳憲最初採集的樣本多來自北京，而北方人比較常吃到雞蛋。第二，研究的發表對象主要是英美學界，且營養學是以西方營養為基礎所建立的學科，在其架構下沒有鴨蛋的位置，因此在吳憲以西方營養學基礎推動的膳食計畫中，無法放入鴨蛋，更別提皮蛋、鹹蛋了。

\n雖然後續有許多學者提倡不分雞鴨蛋、兩者都鼓勵食用的論點，但是「牛奶和雞蛋最有營養」的觀念隨著教科書、報章雜誌、商人的推廣行銷，日漸成為人們的飲食常識。

\n如果說蛋品工業是帶入西方飲食習慣的敲門磚，營養學就是奠定吃雞蛋趨勢的基石，兩者聯手推動近代中國從鴨蛋到雞蛋的轉變，將華人的飲食納入全球系統，灌輸「雞蛋最營養」的價值觀。

\n至於鴨蛋則華麗轉身，成為華人飲食文化的特色料理，我們可以在麵攤點一盤皮蛋豆腐、吃清粥小菜時來一顆鹹鴨蛋，品嘗端午粽子、中秋月餅內的鹹蛋黃。或許某天早餐也來顆香煎荷包鴨蛋，感受清末民初、早期臺灣農村那個屬於鴨蛋的時代。</string>
</resources>